# ast_merge_tool

./: .gitignore  LICENSE  README.md
backend/: ast_differ.py  ast_parser.py  context_extractor.py  js_parser.py  main.py  merge_engine.py  pyproject.toml  test.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  ContextView.tsx  DiffView.tsx  MergePanel.tsx
frontend/src/services/: api.ts
