[project]
name = "ast-merge"
version = "0.1.0"
description = "AST-based code merge tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-python>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
